<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders">
    <fragment
        android:label="@string/menu_orders"
        android:name="delivery.samurai.android.ui.homev2.OrdersFragmentV2"
        android:id="@+id/nav_orders"/>
    <fragment
        android:label="@string/menu_shifts"
        android:name="delivery.samurai.android.ui.shiftsV2.ShiftsFragmentV2"
        android:id="@+id/nav_shifts"/>
    <fragment
        android:label="@string/menu_shift_areas"
        android:name="delivery.samurai.android.ui.zones.ZonesFragment"
        android:id="@+id/nav_zones"/>
    <fragment
        android:label="@string/menu_wallet"
        android:name="delivery.samurai.android.ui.wallet.WalletFragment"
        android:id="@+id/nav_wallet"/>
    <fragment
        android:label="@string/support"
        android:name="delivery.samurai.android.ui.tickets.presentation.ticketslist.TicketsFragment"
        android:id="@+id/nav_tickets"/>
    <fragment
        android:label="@string/support"
        android:name="delivery.samurai.android.ui.support.SupportFragment"
        android:id="@+id/nav_support"/>
    <fragment
        android:label="@string/more"
        android:name="delivery.samurai.android.ui.about.MoreFragment"
        android:id="@+id/nav_more">
        <action
            android:id="@+id/action_nav_more_to_nav_order_history"
            app:destination="@+id/nav_order_history"/>
        <action
            android:id="@+id/action_nav_more_to_nav_withdraw_history"
            app:destination="@+id/nav_withdraw_history"/>
        <action
            android:id="@+id/action_nav_more_to_nav_referral_program"
            app:destination="@+id/nav_referral_program"/>
        <action
            android:id="@+id/action_nav_more_to_nav_score"
            app:destination="@+id/nav_score"/>
        <action
            android:id="@+id/action_nav_more_to_btnMyAccount2"
            app:destination="@+id/nav"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_nav_more_to_nav_agreement"
            app:destination="@+id/nav_agreement"/>
        <action
            android:id="@+id/action_nav_more_to_nav_component_showcase"
            app:destination="@+id/nav_component_showcase"/>
        <action
            android:id="@+id/action_nav_more_to_nav_captains_uniforms"
            app:destination="@+id/nav_captains_uniforms"/>
    </fragment>
    <fragment
        android:label="@string/my_account"
        android:name="delivery.samurai.android.ui.about.MyAccountRouterFragment"
        android:id="@+id/nav"/>
    <fragment
        android:label="@string/attendace"
        android:name="delivery.samurai.android.ui.attendanceRegistry.AttendanceRegistryFragment"
        android:id="@+id/attendance_registry"/>
    <fragment
        android:label="@string/agreement_title_screen"
        android:name="delivery.samurai.android.ui.agreement.AgreementFragment"
        android:id="@+id/nav_agreement">
        <action
            android:id="@+id/action_nav_agreement_to_agreementDetailFragment"
            app:destination="@+id/agreementDetailFragment"/>
    </fragment>
    <fragment
        android:label="@string/menu_order_history"
        android:name="delivery.samurai.android.ui.orders.OrderHistoryFragment"
        android:id="@+id/nav_order_history"/>
    <fragment
        android:label="@string/withdraw_history"
        android:name="delivery.samurai.android.ui.withdraw.WithDrawHistoryFragment"
        android:id="@+id/nav_withdraw_history"/>
    <fragment
        android:label="@string/referral_program"
        android:name="delivery.samurai.android.ui.referralProgram.ReferYourFriendFragment"
        android:id="@+id/nav_referral_program"/>
    <fragment
        android:label="@string/score"
        android:name="delivery.samurai.android.ui.score.ScoreFragment"
        android:id="@+id/nav_score"/>
    <fragment
        android:label="@string/agreement_title_screen"
        android:name="delivery.samurai.android.ui.agreement.AgreementDetailFragment"
        android:id="@+id/agreementDetailFragment"/>
    <fragment
        android:label="@string/menu_points"
        android:name="delivery.samurai.android.ui.points.presentation.PointsFragment"
        android:id="@+id/nav_points"/>
    <fragment
        android:label="@string/redeem"
        android:name="delivery.samurai.android.ui.redeem.presentation.RedeemFragment"
        android:id="@+id/nav_redeem"/>
    <fragment
        android:label="@string/ticket_details"
        android:name="delivery.samurai.android.ui.tickets.presentation.ticketdetails.TicketDetailsFragment"
        android:id="@+id/nav_ticket_details"/>
    <fragment
        android:label="@string/trophy_title"
        android:name="delivery.samurai.android.ui.about.TrophiesCollectionsFragment"
        android:id="@+id/nav_trophies_collections"/>
    <fragment
        android:name="delivery.samurai.android.ui.about.TrophiesListFragment"
        android:id="@+id/nav_trophies_list"/>
    <fragment
        android:name="delivery.samurai.android.ui.about.TrophyMilestonesFragment"
        android:id="@+id/nav_trophy_milestones"/>
    <fragment
        android:label="@string/captains_uniform_title"
        android:name="delivery.samurai.android.ui.captainsuniforms.CaptainsUniformsFragment"
        android:id="@+id/nav_captains_uniforms"/>
    <fragment
        android:label="@string/suspension"
        android:name="delivery.samurai.android.ui.suspension.SuspensionFragment"
        android:id="@+id/nav_suspension"/>
    <fragment
        android:label="@string/component_showcase"
        android:name="delivery.samurai.android.ui.compose.showcase.ComponentShowcaseFragment"
        android:id="@+id/nav_component_showcase"/>
    <action
        android:id="@+id/action_global_support"
        app:destination="@+id/nav_support"
        app:launchSingleTop="true"
        app:popUpTo="@+id/nav_orders"
        app:popUpToInclusive="false"/>
    <action
        android:id="@+id/action_global_tickets"
        app:destination="@+id/nav_tickets"
        app:launchSingleTop="true"
        app:popUpTo="@+id/nav_orders"
        app:popUpToInclusive="false"/>
</navigation>
