<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_orders_list"
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders"/>
        <item
            android:icon="@drawable/calendar_month_24"
            android:id="@+id/attendance_registry"
            android:title="@string/attendace"/>
        <item
            android:icon="@drawable/ic_shifts"
            android:id="@+id/nav_shifts"
            android:title="@string/menu_shifts"/>
        <item
            android:icon="@drawable/ic_zones"
            android:id="@+id/nav_zones"
            android:title="@string/menu_shift_areas"/>
        <item
            android:icon="@drawable/ic_wallet_icon"
            android:id="@+id/nav_wallet"
            android:title="@string/menu_wallet"/>
        <item
            android:icon="@drawable/ic_trophy"
            android:id="@+id/nav_trophies_collections"
            android:title="@string/menu_trophies"/>
        <item
            android:icon="@drawable/ic_done_24"
            android:id="@+id/nav_points"
            android:title="@string/menu_points"/>
        <item
            android:icon="@drawable/ic_support_icon"
            android:id="@+id/nav_suspension"
            android:title="@string/menu_suspensions"/>
        <item
            android:icon="@drawable/ic_support_icon"
            android:id="@+id/nav_support"
            android:title="@string/support"/>
        <item
            android:icon="@drawable/ic_support_icon"
            android:id="@+id/nav_tickets"
            android:visible="false"
            android:title="@string/be_support"/>
        <item
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:id="@+id/nav_more"
            android:title="@string/more"/>
        <item
            android:enabled="false"
            android:id="@+id/nav_padding"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_assets"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_training"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_faqs"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_ninja_store"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_privacy_policy"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_about_us"
            android:visible="false"
            android:title=""/>
        <item
            android:enabled="false"
            android:id="@+id/nav_logout"
            android:visible="false"
            android:title=""/>
    </group>
</menu>
