<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical">
        <TextView
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:id="@+id/tvDialogTitle"
            android:paddingBottom="@dimen/spacing_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urpay_dialog_title"/>
        <ImageView
            android:layout_gravity="end|center_vertical"
            android:id="@+id/ivDialogClose"
            android:padding="@dimen/spacing_4"
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_24"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/close"
            app:tint="@color/secondary_text"/>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilDialogUrPayId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:hint="@string/hint_urpay_mobile"
        android:layoutDirection="ltr"
        app:helperText="@string/helper_urpay_mobile"
        style="@style/InputLayoutStyle.SignUp.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogUrPayId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilDialogUrPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12"
        android:hint="@string/hint_iban"
        android:layoutDirection="ltr"
        app:helperText="@string/helper_iban_saudi"
        style="@style/InputLayoutStyle.SignUp.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogUrPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="34"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:insetLeft="@dimen/spacing_8"
            android:insetRight="@dimen/spacing_8"
            android:layout_marginEnd="@dimen/spacing_8"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogSave"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingRight="@dimen/spacing_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:cornerRadius="@dimen/spacing_4"
            app:iconPadding="@dimen/spacing_4"
            style="@style/Widget.MaterialComponents.Button"/>
    </LinearLayout>
</LinearLayout>
