<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/text_size_xx_tiny_extra"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/textView"
        android:padding="@dimen/spacing_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.MaterialComponents.Headline5"/>
    <TextView
        android:textSize="@dimen/text_size_xx_tiny_extra"
        android:id="@+id/textView19"
        android:padding="@dimen/spacing_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_looks_like_you_are_using_mock_location_please_change_you_location_preferences_from_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginEnd="@dimen/spacing_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"/>
    <Button
        android:id="@+id/btnGotoSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_settings"
        android:layout_marginEnd="@dimen/spacing_12"
        app:layout_constraintEnd_toStartOf="@+id/retry"
        app:layout_constraintTop_toBottomOf="@+id/textView19"/>
</androidx.constraintlayout.widget.ConstraintLayout>
