<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/spacing_12"
    android:paddingTop="@dimen/spacing_18"
    android:paddingRight="@dimen/spacing_12"
    android:paddingBottom="@dimen/spacing_18"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/spacing_12"
    android:paddingVertical="@dimen/spacing_18">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:textSize="@dimen/text_size_xxx_large"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:id="@+id/logo"
            android:layout_width="@dimen/spacing_120"
            android:layout_height="@dimen/spacing_24"
            android:scaleType="fitCenter"
            android:transitionName="@string/anim_name_logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_stat_name"/>
        <TextView
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textColor="@color/secondary_text"
            android:id="@+id/tvContactSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_18"
            android:text="@string/if_you_face_any_issue_with_your_login_n_contact_with"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/logo"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_18"
            android:hint="@string/email"
            android:layoutDirection="ltr"
            app:layout_constraintTop_toBottomOf="@+id/tvContactSupport"
            app:suffixText="@string/postFixEmail"
            style="@style/InputLayoutStyle.SignUp.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:textSize="@dimen/text_size_xx_tiny_extra"
                android:id="@+id/etEmail"
                android:padding="@dimen/spacing_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/user_name_digits"
                android:inputType="textEmailAddress"
                android:layoutDirection="ltr"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/ilEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black"
            style="@style/InputLayoutStyle.SignUp.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:textSize="@dimen/text_size_xx_tiny_extra"
                android:id="@+id/etPassword"
                android:padding="@dimen/spacing_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textColor="@color/blue"
            android:gravity="start"
            android:id="@+id/btnResetPolicy"
            android:background="@color/zs_color_transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6"
            android:text="@string/reset_password"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword"
            style="@style/Body1"/>
        <com.google.android.material.button.MaterialButton
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/btnSignIn"
            android:paddingTop="@dimen/spacing_9"
            android:paddingBottom="@dimen/spacing_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_14"
            android:text="@string/login"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/spacing_9"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/spacing_6"
            app:layout_constraintTop_toBottomOf="@+id/btnResetPolicy"/>
        <com.google.android.material.button.MaterialButton
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/btnSignUp"
            android:paddingTop="@dimen/spacing_9"
            android:paddingBottom="@dimen/spacing_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_3"
            android:text="@string/register_new_captain"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/spacing_9"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/spacing_6"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:strokeColor="@android:color/black"
            app:strokeWidth="@dimen/spacing_1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textColor="@color/secondary_text"
            android:gravity="start"
            android:id="@+id/tvPrivacyPolicy"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_using_samurai_you_agree_to_our_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:layout_constraintVertical_bias="1"
            style="@style/Body1"/>
        <TextView
            android:textSize="@dimen/text_size_xx_tiny_extra"
            android:textColor="@color/secondary_text"
            android:gravity="center"
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:alpha="0.7"
            android:letterSpacing="0.05"/>
    </LinearLayout>
</ScrollView>
